# simple_window

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/testing_window/: CMakeLists.txt
examples/testing_window/src/: testing_window.cpp
examples/vulkan_example/: CMakeLists.txt
examples/vulkan_example/src/: vulkan_example.cpp  window.cpp  window.hpp
include/simple_window/: enums.hpp  simple_window.hpp  type_traits.hpp  window_base.hpp  window_win32.hpp  window_win32_interface.hpp  window_xcb.hpp  window_xcb_interface.hpp
src/: window_win32.cpp  window_xcb.cpp
